unpackaged/main/default/objects/project_cloud__Card__c/project_cloud__Card__c.object-meta.xml
<CustomObject>
    <label>Card</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>