unpackaged/main/default/objects/project_cloud__Card__c/fields/Calculated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Start_Date__c</fullName>
    <label>Calculated_Start_Date</label>
    <type>Date</type>
</CustomField>