unpackaged/main/default/objects/project_cloud__Card__c/fields/Card_Created_From_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Card_Created_From_Project_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Name</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>