unpackaged/main/default/objects/project_cloud__Card__c/fields/Position_Formula__c.field-meta.xml
<CustomField>
    <fullName>Position_Formula__c</fullName>
    <formula>project_cloud__Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>