unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Board__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board__c</fullName>
    <inlineHelpText>The Board this Card belongs to</inlineHelpText>
    <label>Board</label>
    <referenceTo>project_cloud__Board__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>