unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Board_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Board Process Step this Card is in</inlineHelpText>
    <label>Board Process Step</label>
    <referenceTo>project_cloud__Board_Process_Step__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>