unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Card_Name__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Card_Name__c</fullName>
    <description>A brief explanation of the card. Not to be confused with the description, which is a more detailed explanation of the card</description>
    <inlineHelpText>A brief explanation of the card. See the description for more detail</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>