unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a system field indicating which card this card was cloned from</description>
    <inlineHelpText>Shows the Name of a card that the card was cloned from.</inlineHelpText>
    <label>Cloned From</label>
    <referenceTo>project_cloud__Card__c</referenceTo>
    <relationshipLabel>Cloned Cards</relationshipLabel>
    <relationshipName>Cloned_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>