unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Completion_Category__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completion_Category__c</fullName>
    <formula>IF(ISBLANK(project_cloud__Board_Process_Step__c), &#39;On Hold&#39;, TEXT(project_cloud__Board_Process_Step__r.project_cloud__Completion_Category__c))</formula>
    <inlineHelpText>The completion status for the card (determined by Board Process Step)</inlineHelpText>
    <label>Completion Category</label>
    <type>Text</type>
</CustomField>