unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Due_Date__c</fullName>
    <inlineHelpText>Due Date for this Card</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>