unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Position__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Position__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Determines the position in the current step.</inlineHelpText>
    <label>Position</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>