unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Requirement__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Requirement that this Card is associated with</inlineHelpText>
    <label>Requirement</label>
    <referenceTo>project_cloud__Requirement__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>