unpackaged/main/default/objects/project_cloud__Card__c/fields/project_cloud__Weight__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Weight__c</fullName>
    <formula>IF(ISBLANK(project_cloud__Board_Process_Step__c), 0, BLANKVALUE(project_cloud__Board_Process_Step__r.project_cloud__Completed_Percent__c, CASE(project_cloud__Completion_Category__c, &#39;Completed&#39;, 1, &#39;In Progress&#39;, 0.01, 0)))</formula>
    <inlineHelpText>The weight of the Card from the parent Board Process step</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>