unpackaged/main/default/objects/project_cloud__Card__c/fields/Project_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cards</relationshipName>
    <type>Lookup</type>
</CustomField>