unpackaged/main/default/objects/project_cloud__Card__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>