unpackaged/main/default/objects/project_cloud__Card__c/fields/ProjectOwnerIdText2__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwnerIdText2__c</fullName>
    <label>ProjectOwnerIdText2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>