unpackaged/main/default/objects/project_cloud__Card__c/fields/ProjectOwnerIdText__c.field-meta.xml
<CustomField>
    <fullName>ProjectOwnerIdText__c</fullName>
    <label>ProjectOwnerIdText</label>
    <length>50</length>
    <type>Text</type>
</CustomField>